k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: dev
spec:
  rules:
rules:
    - http:
        paths:
          - path: /api/data
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
